Bug 691550 - Clist writing/reading mismatch of pattern with transparency and mask
Summary: Clist writing/reading mismatch of pattern with transparency and mask
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Graphics Library (show other bugs)
Version: master
Hardware: All All
: P1 blocker
Assignee: Ray Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-11 17:28 UTC by Michael Vrhel
Modified: 2011-06-01 15:00 UTC (History)
2 users (show)

See Also:
Customer:
Word Size: ---


Attachments
bug2.pdf (3.35 MB, application/pdf)
2010-08-11 17:28 UTC, Michael Vrhel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Vrhel 2010-08-11 17:28:21 UTC
Created attachment 6646 [details]
bug2.pdf

This is a split off from bug691527.  From analysis of Ray Johnston it appears that a pattern that includes transparency and a mask is not getting written and read into the clist properly.
Comment 1 Ray Johnston 2010-08-11 17:38:29 UTC
Comment on attachment 6646 [details]
bug2.pdf

from bug691527_simple_bug2.pdf of bug 691527
Comment 2 Michael Vrhel 2010-08-16 20:55:53 UTC
Patch for 691471 is relevant to this bug.  It handles the non-clist case but clist case still has issues.
Comment 3 christinedelight.top85 2011-02-06 00:04:54 UTC
Created attachment 7204 [details]
6646: bug2.pdf
Comment 4 Robin Watts 2011-06-01 14:59:31 UTC
I can't make the clist or non-clist case give problems since the pattern trans clist work was merged to trunk.

Closing.