When we produce a glyph uncached, and it's to be filled with a pattern colour space *and* there is PDF transparency involved force FAPI to (try to) produce an outline (for lower level code to use as a clip) instead of a bitmap (to use as a mask).

This does produce some pixel level differences in a few
cluster files, but improves a load of PDF 1.7 FTS jobs.

Bug 691550

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11645 a1074d23-0009-0410-80fe-cf8c14f379e6